# ZeroLimit

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build_linux.sh  build_macos.zsh  build_windows.ps1  installer.iss  update_version.ps1
cmake/: Version.cmake  icon.icns
docs/: AAX_DEVELOPER_BUILD_GUIDE.md  AAX_LICENSE_REQUEST_EMAIL.md  AAX_SDK_README.md  AAX_SIGNING_GUIDE.md
plugin/: CMakeLists.txt
plugin/src/: KeyEventForwarder.cpp  KeyEventForwarder.h  KeyEventForwarder_mac.mm  ParameterIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Version.h.in
plugin/src/dsp/: CrossoverLR4.cpp  CrossoverLR4.h  Limiter.cpp  Limiter.h  MomentaryProcessor.cpp  MomentaryProcessor.h  MultibandLimiter.cpp  MultibandLimiter.h
scripts/: AAX_SIGNING_README.md  DownloadWebView2.ps1  mac_install_helper.command  sign_aax_windows.ps1  update_version.ps1
wasm/: CMakeLists.txt  build.sh
wasm/src/: biquad.h  crossover_lr4.h  dsp_engine.h  limiter.h  momentary_processor.h  multiband_limiter.h  wasm_exports.cpp
webui/: .firebaserc  index.html  index.web.html  package-lock.json  package.json  vite.config.ts  vite.config.web.ts
webui/public/: debug.html  test.html  version-check.html
webui/public-web/worklet/: dsp-processor.js
webui/scripts/: sync-web-demos.cjs
webui/src/: App.css  App.tsx  main.tsx  version.ts  vite-env.d.ts
webui/src/assets/: licenses.json  web_demos.json
webui/src/bridge/: juce.ts
webui/src/bridge/web/: WebAudioEngine.ts  WebBridgeManager.ts  WebParamState.ts  juce-shim.ts  web-juce.ts
webui/src/components/: GainFader.tsx  GlobalDialog.tsx  LicenseDialog.tsx  ParameterFader.tsx  ReleaseSection.tsx  VUMeter.tsx  WaveformView.tsx  WebDemoMenu.tsx  WebTransportBar.tsx
webui/src/hooks/: useFineAdjustPointer.ts  useGlobalZoomGuard.ts  useHostShortcutForwarding.ts  useJuceParam.ts  useNumberInputAdjust.ts
webui/src/juce/: JuceBound.tsx
webui/src/store/: dialogStore.ts
webui/src/theme/: index.ts
webui/src/types/: index.ts
